removed unused methods